# yadro_test

./: .clang-format  CMakeLists.txt  README.md
include/: computer_club.hpp  line_parser.hpp
src/: CMakeLists.txt  computer_club.cpp  line_parser.cpp  main.cpp
